again fixing spacing for the new link buttons in the who section of index page

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -258,6 +258,7 @@ img {
 .who .container {
     display: flex;
     justify-content: center;
+    padding: 0 0 3em 0;
 }
 
 .who .first
@@ -299,7 +300,7 @@ img {
     font-weight: 500;
     font-size: 14px;
     color: #757272;
-    margin: 1.2em 0;
+    margin: 1.2em 0 2.2em 0;
 }
 
 .who .btn
